--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <section class="products">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="https://via.placeholder.com/300x300?text=Producto+1" alt="Producto 1">
+                        <img src="imagenes/Cigarrilos herbales.jpg"Producto 1">
                     </div>
                     <div class="product-info">
                         <h2>Producto 1</h2>
-                        <p class="product-description">Descripción del producto 1. Características y beneficios destacados.</p>
+                        <p class="product-description">Cogarrillos herbales</p>
                         <p class="product-price">$99.99</p>
                         <button class="btn-contact" onclick="contactWhatsApp('Producto 1')">
                             <i class="fab fa-whatsapp"></i> Consultar
@@ -41,11 +41,11 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="https://via.placeholder.com/300x300?text=Producto+2" alt="Producto 2">
+                        <img src="imagenes/cigarrilos 2.jpg" alt="Producto 2">
                     </div>
                     <div class="product-info">
                         <h2>Producto 2</h2>
-                        <p class="product-description">Descripción del producto 2. Características y beneficios destacados.</p>
+                        <p class="product-description">cigarrilos 2.</p>
                         <p class="product-price">$149.99</p>
                         <button class="btn-contact" onclick="contactWhatsApp('Producto 2')">
                             <i class="fab fa-whatsapp"></i> Consultar
@@ -55,11 +55,11 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="https://via.placeholder.com/300x300?text=Producto+3" alt="Producto 3">
+                        <img src="imagenes/herbales revestidos.jpg" alt="Producto 3">
                     </div>
                     <div class="product-info">
                         <h2>Producto 3</h2>
-                        <p class="product-description">Descripción del producto 3. Características y beneficios destacados.</p>
+                        <p class="product-description">herbales revestidos.</p>
                         <p class="product-price">$199.99</p>
                         <button class="btn-contact" onclick="contactWhatsApp('Producto 3')">
                             <i class="fab fa-whatsapp"></i> Consultar
