--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <div class="container">
-            <h1>Mi Tienda</h1>
+            <h1>Puchill</h1>
             <nav class="social-links">
-                <a href="https://wa.me/543517665977" target="_blank" class="whatsapp-link" id="whatsappLink">
+                <a href="https://wa.me/542974278736" target="_blank" class="whatsapp-link" id="whatsappLink">
                     <i class="fab fa-whatsapp"></i>
                 </a>
                 <a href="https://instagram.com/puchill.cr" target="_blank" class="instagram-link">
@@ -27,12 +27,12 @@
             <section class="products">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="imagenes/Cigarrilos herbales.jpg"Producto 1">
+                        <img src="imagenes/Cigarrilos por 10.jpeg"Producto 1">
                     </div>
                     <div class="product-info">
-                        <h2>Producto 1</h2>
-                        <p class="product-description">Cogarrillos herbales</p>
-                        <p class="product-price">$99.99</p>
+                        <h2>Cigarrillos Herbales x10 (Mixtos)</h2>
+                        <p class="product-description"></p>
+                        <p class="product-price">$7000</p>
                         <button class="btn-contact" onclick="contactWhatsApp('Producto 1')">
                             <i class="fab fa-whatsapp"></i> Consultar
                         </button>
@@ -41,12 +41,12 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="imagenes/cigarrilos 2.jpg" alt="Producto 2">
+                        <img src="imagenes/puichi 20.jpeg" alt="Producto 2">
                     </div>
                     <div class="product-info">
-                        <h2>Producto 2</h2>
-                        <p class="product-description">cigarrilos 2.</p>
-                        <p class="product-price">$149.99</p>
+                        <h2>Cigarrillos Herbales x20 (Mixtos)</h2>
+                        <p class="product-description"></p>
+                        <p class="product-price">$9000</p>
                         <button class="btn-contact" onclick="contactWhatsApp('Producto 2')">
                             <i class="fab fa-whatsapp"></i> Consultar
                         </button>
@@ -55,31 +55,44 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="imagenes/herbales revestidos.jpg" alt="Producto 3">
+                        <img src="imagenes/Revestidos por unidad.jpeg" alt="Producto 3">
                     </div>
                     <div class="product-info">
-                        <h2>Producto 3</h2>
-                        <p class="product-description">herbales revestidos.</p>
-                        <p class="product-price">$199.99</p>
+                        <h2>Cigarrillos Herbales Revestidos x Unidad</h2>
+                        <p class="product-description"></p>
+                        <p class="product-price">$2000</p>
+                        <button class="btn-contact" onclick="contactWhatsApp('Producto 3')">
+                            <i class="fab fa-whatsapp"></i> Consultar
+                        </button>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="imagenes/Blend.jpeg" alt="Producto 3">
+                    </div>
+                    <div class="product-info">
+                        <h2>Blend Herbal 60g (doypack)</h2>
+                        <p class="product-description"></p>
+                        <p class="product-price">$15000</p>
+                        <button class="btn-contact" onclick="contactWhatsApp('Producto 3')">
+                            <i class="fab fa-whatsapp"></i> Consultar
+                        </button>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="imagenes/yerba.jpeg" alt="Producto 3">
+                    </div>
+                    <div class="product-info">
+                        <h2>Yerba Mate AgroEcologica con Melena de León (250g)</h2>
+                        <p class="product-description"></p>
+                        <p class="product-price">$19000</p>
                         <button class="btn-contact" onclick="contactWhatsApp('Producto 3')">
                             <i class="fab fa-whatsapp"></i> Consultar
                         </button>
                     </div>
                 </div>
 
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="https://via.placeholder.com/300x300?text=Producto+4" alt="Producto 4">
-                    </div>
-                    <div class="product-info">
-                        <h2>Producto 4</h2>
-                        <p class="product-description">Descripción del producto 4. Características y beneficios destacados.</p>
-                        <p class="product-price">$249.99</p>
-                        <button class="btn-contact" onclick="contactWhatsApp('Producto 4')">
-                            <i class="fab fa-whatsapp"></i> Consultar
-                        </button>
-                    </div>
-                </div>
             </section>
         </div>
     </main>
@@ -88,7 +101,7 @@
         <div class="container">
             <p>&copy; 2024 Mi Tienda. Todos los derechos reservados.</p>
             <div class="footer-social">
-                <a href="https://wa.me/543517665977" target="_blank" class="whatsapp-link">
+                <a href="https://wa.me/542974278736" target="_blank" class="whatsapp-link">
                     <i class="fab fa-whatsapp"></i> WhatsApp
                 </a>
                 <a href="https://instagram.com/puchill.cr" target="_blank" class="instagram-link">
