--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Mi Tienda. Todos los derechos reservados.</p>
+            <p>&copy;Puchill. Todos los derechos reservados.</p>
             <div class="footer-social">
                 <a href="https://wa.me/542974278736" target="_blank" class="whatsapp-link">
                     <i class="fab fa-whatsapp"></i> WhatsApp
