--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda Online - Productos</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body>
-    <header>
-        <div class="container">
-            <h1>Puchill</h1>
-            <nav class="social-links">
-                <a href="https://wa.me/542974278736" target="_blank" class="whatsapp-link" id="whatsappLink">
-                    <i class="fab fa-whatsapp"></i>
-                </a>
-                <a href="https://instagram.com/puchill.cr" target="_blank" class="instagram-link">
-                    <i class="fab fa-instagram"></i>
-                </a>
-            </nav>
-        </div>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Puchill - Tienda Online</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+      
+        <!-- Open Graph -->
+        <meta property="og:title" content="Puchill - Tienda Online">
+        <meta property="og:description" content="Descubrí productos únicos con diseño elegante y compra fácil por WhatsApp.">
+        <meta property="og:image" content="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/imagenes/fondo12.jpeg">
+        <meta property="og:url" content="https://instagram.com/puchill.cr/">
+        <meta property="og:type" content="website">
+      </head>
+      <body>
+        <header>
+            <div class="container">
+                <h1>Puchill.Cr</h1>
+                <nav class="social-links">
+                    <a href="https://wa.me/542974278736" target="_blank" class="whatsapp-link" id="whatsappLink">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                    <a href="https://instagram.com/puchill.cr" target="_blank" class="instagram-link">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </nav>
+            </div>
+        </header>
 
     <main>
         <div class="container">
@@ -33,7 +40,7 @@
                         <h2>Cigarrillos Herbales x10 (Mixtos)</h2>
                         <p class="product-description"></p>
                         <p class="product-price">$7000</p>
-                        <button class="btn-contact" onclick="contactWhatsApp('Producto 1')">
+                        <button class="btn-contact" onclick="contactWhatsApp('Los Cigarrillos Herbales x10 (Mixtos)')">
                             <i class="fab fa-whatsapp"></i> Consultar
                         </button>
                     </div>
@@ -47,7 +54,7 @@
                         <h2>Cigarrillos Herbales x20 (Mixtos)</h2>
                         <p class="product-description"></p>
                         <p class="product-price">$9000</p>
-                        <button class="btn-contact" onclick="contactWhatsApp('Producto 2')">
+                        <button class="btn-contact" onclick="contactWhatsApp('Los Cigarrillos Herbales x20 (Mixtos)')">
                             <i class="fab fa-whatsapp"></i> Consultar
                         </button>
                     </div>
@@ -55,13 +62,13 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="imagenes/Revestidos por unidad.jpeg" alt="Producto 3">
+                        <img src="imagenes/Herbales 2.jpeg" alt="Producto 3">
                     </div>
                     <div class="product-info">
                         <h2>Cigarrillos Herbales Revestidos x Unidad</h2>
-                        <p class="product-description"></p>
+                        <p class="product-description">En sus dos opciones Manzanilla Y Rosas</p>
                         <p class="product-price">$2000</p>
-                        <button class="btn-contact" onclick="contactWhatsApp('Producto 3')">
+                        <button class="btn-contact" onclick="contactWhatsApp('El Cigarrillo Herbal Revestido x Unidad')">
                             <i class="fab fa-whatsapp"></i> Consultar
                         </button>
                     </div>
@@ -74,8 +81,8 @@
                         <h2>Blend Herbal 60g (doypack)</h2>
                         <p class="product-description"></p>
                         <p class="product-price">$15000</p>
-                        <button class="btn-contact" onclick="contactWhatsApp('Producto 3')">
-                            <i class="fab fa-whatsapp"></i> Consultar
+                        <button class="btn-contact" onclick="contactWhatsApp('Blend Herbal 60g (doypack)')">
+                            <i class="fab fa-whatsapp"></i> Consultar'
                         </button>
                     </div>
                 </div>
@@ -87,7 +94,7 @@
                         <h2>Yerba Mate AgroEcologica con Melena de León (250g)</h2>
                         <p class="product-description"></p>
                         <p class="product-price">$19000</p>
-                        <button class="btn-contact" onclick="contactWhatsApp('Producto 3')">
+                        <button class="btn-contact" onclick="contactWhatsApp('La Yerba Mate AgroEcologica con Melena de León (250g)')">
                             <i class="fab fa-whatsapp"></i> Consultar
                         </button>
                     </div>
