--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Puchill - Tienda Online</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-      
-        <!-- Open Graph -->
         <meta property="og:title" content="Puchill - Tienda Online">
         <meta property="og:description" content="Descubrí productos únicos con diseño elegante y compra fácil por WhatsApp.">
         <meta property="og:image" content="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/imagenes/fondo12.jpeg">
         <meta property="og:url" content="https://instagram.com/puchill.cr/">
         <meta property="og:type" content="website">
+        <title>Puchill - Tienda Online</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">- Tienda Online">scubrí productos únicos con diseño elegante y compra fácil por WhatsApp.">raw.githubusercontent.com/Nelsonaos/Puchill/main/imagenes/fondo12.jpeg">stagram.com/puchill.cr/">
       </head>
       <body>
         <header>
