--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:type" content="website">
         <title>Puchill - Tienda Online</title>
         <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">- Tienda Online">scubrí productos únicos con diseño elegante y compra fácil por WhatsApp.">raw.githubusercontent.com/Nelsonaos/Puchill/main/imagenes/fondo12.jpeg">stagram.com/puchill.cr/">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
       </head>
       <body>
         <header>
