--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <meta property="og:type" content="website">
       
         <!-- Favicon -->
-        <link rel="icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/android.png" type="image/png">
-        <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/android.png">
+        <link rel="icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Entera.jpeg" type="image/png">
+        <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Entera.jpeg">
       
         <!-- Estilos -->
         <link rel="stylesheet" href="styles.css">
