--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <!-- Open Graph (WhatsApp, Instagram, Facebook) -->
         <meta property="og:title" content="Puchill | Tienda Online">
         <meta property="og:description" content="Descubrí productos únicos con diseño elegante. Comprá fácil por WhatsApp.">
-        <meta property="og:image" content="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Entera.jpeg">
+        <meta property="og:image" content="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Tana.jpeg">
         <meta property="og:url" content="https://instagram.com/puchill.cr/">
         <meta property="og:type" content="website">
       
         <!-- Favicon -->
-        <link rel="icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Entera.jpeg" type="image/png">
-        <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Entera.jpeg">
+        <link rel="icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Tana.jpeg" type="image/jpeg">
+        <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Tana.jpeg">
       
         <!-- Estilos -->
         <link rel="stylesheet" href="styles.css">
