--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="imagenes/yerba.jpeg" alt="Producto 3">
+                        <img src="imagenes/Melena.jpeg" alt="Producto 3">
                     </div>
                     <div class="product-info">
                         <h2>Yerba Mate AgroEcologica con Melena de León</h2>
