--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <meta property="og:type" content="website">
       
         <!-- Favicon -->
-        <link rel="icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Tana2.jpeg" type="image/jpg">
-        <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Tana2.jpg">
+        <link rel="icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Tana.jpeg" type="image/jpeg">
+        <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Tana.jpeg">
       
         <!-- Estilos -->
         <link rel="stylesheet" href="styles.css">
