--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta property="og:description" content="Descubrí productos únicos con diseño elegante. Comprá fácil por WhatsApp.">
         <meta property="og:image" content="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Final/Tana2.jpg">
         <meta property="og:url" content="https://instagram.com/puchill.cr/">
-        <meta property="og:type" content="website">
+        <meta property="og:type" content="Comodoro Rivadavia">
       
         <!-- Favicon -->
         <link rel="icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Tana.jpeg" type="image/jpeg">
