--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <meta property="og:type" content="Comodoro Rivadavia">
       
         <!-- Favicon -->
-        <link rel="icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Tana.jpeg" type="image/jpeg">
+        <link rel="icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Tana2.jpg"" type="image/jpg">
         <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Tana.jpeg">
       
         <!-- Estilos -->
