--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <meta property="og:type" content="website">
       
       <!-- Favicon -->
-      <link rel="icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Final/Tana2.jpg" type="image/jpg">
+      <link rel="icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/favicon.ico" type="image/ico">
 
     <!-- Apple Touch Icon -->
         <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Nelsonaos/Puchill/main/Extras/Tana2.jpg">
