--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <link rel="stylesheet" href="styles.css">
         <!-- Iconos -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:wght@800&family=Roboto&display=swap" rel="stylesheet">
       </head>                         
       <body>
         <header>
@@ -111,7 +112,6 @@
                 &copy; Puchill. 0% Impacto Ambiental — Todos los productos son Biodegradables y Compostables ♻️🌎  
                 Estamos comprometidos con la naturaleza y la sabiduría. Todos los derechos reservados.
             </p>
-    
             <div class="footer-social">
                 <a href="https://wa.me/542974278736" target="_blank" class="whatsapp-link">
                     <i class="fab fa-whatsapp"></i> WhatsApp
@@ -124,7 +124,9 @@
             <div class="footer-extra">
                 <p>
                     Creado por <strong>Nelso Oviedo</strong> |
-                    <a href="https://www.linkedin.com/in/nelsooviedo415/" target="_blank">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/nelsooviedo415/" target="_blank" class="linkedin-link">
+                        <i class="fab fa-linkedin"></i> LinkedIn
+                    </a>
                 </p>
             </div>
         </div>
