--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="product-info">
                         <h2>Cigarrillos Herbales x10</h2>
-                        <p class="product-description">En Sus 5 Variedades</p>
+                        <p class="product-description">En sus 5 Variedades</p>
                         <p class="product-price">$7000</p>
                         <button class="btn-contact" onclick="contactWhatsApp('Los Cigarrillos Herbales x10 (Mixtos)')">
                             <i class="fab fa-whatsapp"></i> Consultar
@@ -51,7 +51,7 @@
                     </div>
                     <div class="product-info">
                         <h2>Cigarrillos Herbales x20</h2>
-                        <p class="product-description">En Sus 5 Variedades</p>
+                        <p class="product-description">En sus 5 variedades</p>
                         <p class="product-price">$9000</p>
                         <button class="btn-contact" onclick="contactWhatsApp('Los Cigarrillos Herbales x20 (Mixtos)')">
                             <i class="fab fa-whatsapp"></i> Consultar
@@ -64,8 +64,10 @@
                     </div>
                     <div class="product-info">
                         <h2>Cigarrillos Herbales Revestidos</h2>
-                        <p class="product-description">Por Unidad o En Cajita</p>
-                        <p class="product-description">Opciones Rosas o Manzanilla</p>
+                        <p class="product-description">Por unidad o en cajita</p>
+                        <p class="product-description">En sus dos opciones</p>
+                        <p class="product-description">*Rosas</p>
+                        <p class="product-description">*Manzanilla</p>
                         <p class="product-price">$2000</p>
                         <button class="btn-contact" onclick="contactWhatsApp('El Cigarrillo Herbal Revestido x Unidad')">
                             <i class="fab fa-whatsapp"></i> Consultar
@@ -78,11 +80,11 @@
                     </div>
                     <div class="product-info">
                         <h2>Blend Herbal 60g (doypack)</h2>
-                        <p class="product-description">En sus 5 Variedades</p>
-                        <p class="product-description">Se puede utilizar en:
-                            Armado de cigarrillos Herbales
-                            Para acompañar y mezclar con la yerba mate
-                            Para infusiones de té</p>
+                        <p class="product-description">En sus 5 variedades</p>
+                        <p class="product-description">Se puede utilizar en:</p>
+                            <p class="product-description">1 .Armado de cigarrillos Herbales</p>
+                            <p class="product-description">2 .Para acompañar y mezclar con la yerba mate</p>
+                            <p class="product-description">3 .Para infusiones de té</p>
                         <p class="product-price">$15000</p>
                         <button class="btn-contact" onclick="contactWhatsApp('Blend Herbal 60g (doypack)')">
                             <i class="fab fa-whatsapp"></i> Consultar'
@@ -94,7 +96,7 @@
                         <img src="imagenes/Melena.jpeg" alt="Producto 3">
                     </div>
                     <div class="product-info">
-                        <h2>Yerba Mate AgroEcologica con Melena de León</h2>
+                        <h2>Yerba Mate con Melena de León</h2>
                         <p class="product-description">*250g de Yerba Mate Orgánica.</p>
                         <p class="product-description"> *15g de Melena de León Desmenuzada.</p>
                         <p class="product-price">$19000</p>
@@ -109,8 +111,8 @@
     <footer>
         <div class="container">
             <p>
-                &copy; Puchill. 0% Impacto Ambiental — Todos los productos son Biodegradables y Compostables ♻️🌎  
-                Estamos comprometidos con la naturaleza y la sabiduría. Todos los derechos reservados.
+                &copy; Puchill.Cr 0% Impacto Ambiental — Todos los productos son Biodegradables y Compostables ♻️🌎  
+                Estamos comprometidos con la naturaleza y su sabiduría.💚🌿
             </p>
             <div class="footer-social">
                 <a href="https://wa.me/542974278736" target="_blank" class="whatsapp-link">
