--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <!-- Iconos -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:wght@800&family=Roboto&display=swap" rel="stylesheet">
+        <!--fuente-->
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
       </head>                         
       <body>
         <header>
