--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="product-info">
                         <h2>Cigarrillos Herbales x20</h2>
                         <p class="product-description">En sus 5 variedades</p>
-                        <p class="product-price">$9000</p>
+                        <p class="product-price">Sin stock</p>
                         <button class="btn-contact" onclick="contactWhatsApp('Los Cigarrillos Herbales x20 (Mixtos)')">
                             <i class="fab fa-whatsapp"></i> Consultar
                         </button>
@@ -101,7 +101,7 @@
                         <h2>Yerba Mate con Melena de León</h2>
                         <p class="product-description">*250g de Yerba Mate Orgánica.</p>
                         <p class="product-description"> *15g de Melena de León Desmenuzada.</p>
-                        <p class="product-price">$19000</p>
+                        <p class="product-price">Sin stock</p>
                         <button class="btn-contact" onclick="contactWhatsApp('La Yerba Mate AgroEcologica con Melena de León (250g)')">
                             <i class="fab fa-whatsapp"></i> Consultar
                         </button>
@@ -127,7 +127,7 @@
             <hr> <!-- Separador visual -->
             <div class="footer-extra">
                 <p>
-                    Creado por <strong>Nelso Oviedo</strong> |
+                    Pagina creada por <strong>Nelso Oviedo</strong> |
                     <a href="https://www.linkedin.com/in/nelsooviedo415/" target="_blank" class="linkedin-link">
                         <i class="fab fa-linkedin"></i> LinkedIn
                     </a>
