--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <hr> <!-- Separador visual -->
             <div class="footer-extra">
                 <p>
-                    Pagina creada por <strong>Nelso Oviedo</strong> |
+                    Sitio creado por <strong>Nelso Oviedo</strong> |
                     <a href="https://www.linkedin.com/in/nelsooviedo415/" target="_blank" class="linkedin-link">
                         <i class="fab fa-linkedin"></i> LinkedIn
                     </a>
